<resources>
    <string name="app_name">Parc Marc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remaining">remaining</string>
    <string name="default_park_name">Park Name</string>
    <string name="default_time_remaining">0:00</string>
    <string name="park_image_description">Park Image</string>
    <string name="add_button_description">Add button</string>
    <string name="unlimited">Unlimited</string>
    <string name="duration">Duration:</string>
    <string name="name">Name…</string>
    <string name="first_image_desc">First image</string>
    <string name="second_image_desc">Second image</string>
    <string name="third_image_desc">Third image</string>
    <string name="edit_icon_title">Edit</string>
    <string name="delete_icon_title">Delete</string>
    <string name="share_icon_title">Share</string>
    <string name="settings_icon_title">Settings</string>
    <string name="full_image_display_desc">Full image display</string>
    <string name="works_best_in_an_open_environment">Searching for GPS signal…</string>
    <string name="location_colon">Location:</string>
    <string name="location">Location</string>
    <string name="location_share_title">%1$s Location</string>
    <string name="add_images_max_3">Add Images (max. 3)</string>
    <string name="save">Save</string>
    <string name="parked_car_at_coordinates">I\'ve parked my car at these coordinates: \n%1$s\n\nLink:\nhttps://maps.google.com/?q=%2$s,%3$s</string>
    <string name="link_colon">Link:</string>
    <string name="empty_name">Name cannot be empty!</string>
    <string name="no_gps">GPS not permitted. You will not be able to store park images.</string>
    <string name="no_photos">Unable to store photos.</string>
    <string name="gps_not_enabled">GPS is not enabled on your device. Enable it in the location settings.</string>
    <string name="settings">Settings</string>
    <string name="cancel_button">Cancel</string>
    <string name="expiry_message">Your park \'%1$s\' has expired!</string>
    <string name="duration_exceeded">Duration exceeded</string>
    <string name="minute_remaining">&lt; a minute remaining</string>
    <string name="time_remaining">%1$dh %2$dm remaining</string>
    <string name="unknown_preference">Unknown Preference</string>
    <string name="write_settings">This operation requires the ability to modify system settings. Please grant this permission on the next screen.</string>
    <string name="okay">Okay</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hold_text">Hold to go to full map</string>
    <string name="no_google_maps">Google Maps is not installed.</string>
    <string name="title_activity_settings">SettingsActivity</string>


    <!-- Preference Titles -->
    <string name="ui">UI</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_def_value">MODE_NIGHT_FOLLOW_SYSTEM</string>

    <!-- All Parks Fragment -->
    <string name="delete_park_prompt">"Are you sure you want to delete this Park?"</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="swipe_down_to_refresh">Swipe down to refresh</string>

    <!-- Create New Park Fragment -->
    <string name="choose_source">Choose source</string>
    <string name="where_photo">Where is the photo?</string>
    <string name="camera">Camera</string>
    <string name="gallery">"Gallery"</string>
    <string name="hour_s">hour(s)</string>
    <string name="minute_s">minute(s)</string>
    <string name="empty_string">No Parks found, create a Park to start!</string>


</resources>