<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParkFragment">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/park_time_remaining"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/park_time_remaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="50dp"
        android:text="@string/default_time_remaining"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/park_image_1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/remaining"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/park_time_remaining"
        app:layout_constraintTop_toTopOf="@+id/park_time_remaining" />

    <ImageView
        android:id="@+id/park_image_1"
        android:layout_width="120sp"
        android:layout_height="120sp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/car_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/park_image_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/first_image_desc"
        android:adjustViewBounds="true"/>

    <ImageView
        android:id="@+id/park_image_2"
        android:layout_width="120sp"
        android:layout_height="120sp"
        android:src="@drawable/car_placeholder"
        app:layout_constraintEnd_toStartOf="@+id/park_image_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/park_image_1"
        app:layout_constraintTop_toTopOf="@+id/park_image_1"
        android:contentDescription="@string/second_image_desc"
        android:adjustViewBounds="true"/>

    <ImageView
        android:id="@+id/park_image_3"
        android:layout_width="120sp"
        android:layout_height="120sp"
        android:src="@drawable/car_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/park_image_2"
        app:layout_constraintTop_toTopOf="@+id/park_image_2"
        android:contentDescription="@string/third_image_desc"
        android:adjustViewBounds="true"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>